# edu_2023-ImageProcessing

./: .gitignore  README.md
01_2023-04-12/prg/test/: 01_01_face_k22047.cpp  CMakeLists.txt
01_2023-04-12/prg/課題/: 01_01_face_k22047.cpp
02_2023-04-19/prg/imgWaku/: imgWaku.cpp
02_2023-04-19/prg/kadai2_colors/: 02_02_colors_k22047.cpp  CMakeLists.txt
02_2023-04-19/prg/kadai3_lattice/: 02_03_lattice_k22047.cpp  CMakeLists.txt
02_2023-04-19/prg/pixelAccess/: pixelAccess.cpp
02_2023-04-19/prg/pixelScan/: pixelScan.cpp
03_2023-04-26/prg/grayImg/: grayImg.cpp
03_2023-04-26/prg/kadai1_negaposi/: 03_01_negaposi_k22047.cpp  CMakeLists.txt
03_2023-04-26/prg/kadai2_posterization/: 03_02_LUT_k22047.cpp  CMakeLists.txt
03_2023-04-26/prg/negaposi/: posterization.cpp
03_2023-04-26/prg/posterization/: posterization.cpp
04_2023-05-10/: Book1.xlsx
04_2023-05-10/prg/contrast/: contrast.cpp
04_2023-05-10/prg/histogram/: CMakeLists.txt  histogram.cpp
04_2023-05-10/prg/kadai2_histrgam/: 04_02_k22047.cpp  CMakeLists.txt
05_2023-05-17/: Book1.xlsx
05_2023-05-17/prg/05_01_filter_k22047/: 05_01_filter_k22047.cpp
05_2023-05-17/prg/05_02_denoising_k22047/: 05_02_denoising_k22047.cpp  CMakeLists.txt
05_2023-05-17/prg/ave_filter/: ave_filter.cpp
05_2023-05-17/prg/filter2D/: filter2D.cpp
05_2023-05-17/prg/gaussian/: gaussian_self.cpp
06_2023-05-24/prg/sobel/: sobel.cpp
07_2023-05-31/: Book1.xlsx
08_2023-06-07/prg/red_rectangle/: CMakeLists.txt  red_rectangle.cpp
09_2023-06-14/: contour_sample.xlsx
10_2023-06-21/: Book1.xlsx
12_2023-07-05/: Book1.xlsx
(+62 files in other folders)
